   and/or sized which will truncate long subjects (Gregg)
 o Avoid can not set fm3.ini read-only failure - DosSetPathInfo (Steven)
 o Avoid exception when exiting File/Directory Object Information dialog (Steven)
 o Fix a fast viewer text file load failure. (Gregg)
 o Reversed behavior of horizontal scroll bar in fast viewer bar present with unwrapped text
   absent with wrapped tex and hex

3.06
 o First release built with OpenWatcom associated documentation updates (Steven,Gregg,John)
 o Fixed ramdisk not shown in quicklist drives dropdown and drive bar drive lists (Gregg)
 o Fixed WORKPLACE_PROCESS environment variable check (Gregg)
 o Add CheckPmDrgLimit including IsFm2Window as part of work around PM drag limit (Steven,Gregg)
 o Change mouse button 3 white space click to fail silently (Gregg)
 o Document behavior of global.exe when attempt is made to run it from 4os2 (Gregg)

3.05.09
 o Update readme to reflect warpin install and other code changes (David, John, Gregg)
 o Avoid spurious add_udir error reports (Steven)
 o Harden drag/drop error recovery (Steven, Gregg)
 o Add DbgMsg (Steven)
 o Rework selective error logging logic
 o Rework state save/restore user interface to report problems better (Steven)
 o Correct FileInfoProc binary file detect (Steven)
 o Correct FileInfoProc/IconProc race crash - ticket#77 (Steven)
 o Convert to WarpIN installer - ticket #10 (David, John)
 o Work around for drag/drop limit in PM ticket 50 (Gregg, Steven)
 o Add RunFM2Utils function find utils in path or \utils (Gregg)
 o Fix MMPM file scan to not try to play nonmedia files (Gregg)
 o "Replace" in commands dialog now leave list order intact (Gregg)
 o Code cleanup (ROT13 compiler warning, removed win class pstrings QWL_USER) (Gregg)
 o Removed original Readme from distribution package

3.05 beta08
 o Add SelectDriveIcon function (Gregg)
 o New drive flags - ramdisk, virtual drive & no drive stats (Gregg)
 o New icons for ramdisk, virtual drives & directories (David)